--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,9 @@ h2 {
     color: rgb(242, 242, 242);
 }
 
-p {
+h3 {
     font-family: coffee;
-    font-size: 60px;
+    font-size: 100px;
     color: rgb(242, 242, 242);
 }
 
@@ -50,6 +50,17 @@ p {
     background-color: rgba(0, 0, 0, .5);
     width: 100vw;
     height: 100px;
+}
+
+#bio {
+    text-align: center;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, .5);
+    background-position: center;
+    width: 100vw;
+
 }
 
 #pageBG {
@@ -98,6 +109,10 @@ p {
     border-radius: 50%;
     width: 400px;
     height: 400px;
+}
+
+#bioPage {
+
 }
 
 
