--- a/views/resume.html
+++ b/views/resume.html
@@ -6,17 +6,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../imgs/skull360.gif" type="image/gif">
     <title>My Resume</title>
 </head>
 
 <body id="pageContent">
     <img id="pageBG" src="../imgs/an60fKt.jpg">
     <div id="navContainer">
-        <button class="navButtons"> <a>Bio</a> </button>
+        <button class="navButtons"> <a href="../index.html">Bio</a> </button>
         <button class="navButtons" class="thisPage"> <a>Resume</a> </button>
         <img class="navLinks" src="../imgs/ezgif.com-gif-maker(5).gif">
-        <button class="navButtons"> <a>Projects</a> </button>
-        <button class="navButtons"> <a>Contact Me</a> </button>
+        <button class="navButtons"> <a href="../views/projects.html">Projects</a> </button>
+        <button class="navButtons"> <a href="../views/contact.html">Contact Me</a> </button>
     </div>
 </body>
 
