--- a/views/contact.html
+++ b/views/contact.html
@@ -20,6 +20,13 @@
         <button class="navButtons"> <a href="../views/projects.html">Projects</a> </button>
         <button class="navButtons"> <a>Contact Me</a> </button>
     </div>
+
+    <div id="projSect1">
+        <h4><a href="">SethJohnsonCoding@gmail.com</a></h4>
+        <h4><a href="">SethJohnsonWelding@gmail.com</a></h4>
+        <h4><a href="https://www.linkedin.com/in/seth-johnson-46a792263/">Linkedin</a></h4>
+        <h4><a href="https://github.com/Bones0689">GitHub</a></h4>
+    </div>
 </body>
 
 <footer>
