backgroung transition setup

--- a/views/projects.html
+++ b/views/projects.html
@@ -12,7 +12,7 @@
 </head>
 
 <body id="pageContent">
-    <img id="pageBG" src="../imgs/an60fKt.jpg">
+    <img id="pageBG" src="../imgs/bg3.jpg">
     <div id="navContainer">
         <button class="navButtons"> <a href="../index.html">Bio</a> </button>
         <button class="navButtons"> <a href="../views/resume.html">Resume</a> </button>
