--- a/views/resume.html
+++ b/views/resume.html
@@ -11,7 +11,7 @@
 </head>
 
 <body id="pageContent">
-    <img id="pageBG" src="../imgs/an60fKt.jpg">
+    <img id="pageBG" src="../imgs/bg2.jpg">
     <div id="navContainer">
         <button class="navButtons"> <a href="../index.html">Bio</a> </button>
         <button class="navButtons" class="thisPage"> <a>Resume</a> </button>
