--- a/views/contact.html
+++ b/views/contact.html
@@ -24,7 +24,7 @@
     <div id="projSect1">
         <img id="contactsImg" src="../imgs/smalls.jpg">
         <img id="contactsImg2" src="../imgs/smalls2.jpg">
-        <p id="contactHeader">reach out</p>
+        <p id="contactsHeader">reach out</p>
         <h4><a href="">SethJohnsonCoding@gmail.com</a></h4>
         <h4><a href="">SethJohnsonWelding@gmail.com</a></h4>
         <h4><a href="https://www.linkedin.com/in/seth-johnson-46a792263/">Linkedin</a></h4>
