--- a/views/projects.html
+++ b/views/projects.html
@@ -20,6 +20,15 @@
         <button class="navButtons"> <a>Projects</a> </button>
         <button class="navButtons"> <a href="../views/contact.html">Contact Me</a> </button>
     </div>
+    <div class="carouselContainer">
+        <div class="car1">
+
+        </div>
+        <div class="car2">
+
+        </div>
+    </div>
+    
 
 </body>
 
