--- a/views/resume.html
+++ b/views/resume.html
@@ -11,7 +11,7 @@
 </head>
 
 <body id="pageContent">
-    <img id="pageBG" src="../imgs/bg2.jpg">
+    <img id="pageBG" src="../imgs/altBG2.jpg">
     <div id="navContainer">
         <button class="navButtons"> <a href="../index.html">Bio</a> </button>
         <button class="navButtons" class="thisPage"> <a>Resume</a> </button>
@@ -19,6 +19,12 @@
         <button class="navButtons"> <a href="../views/projects.html">Projects</a> </button>
         <button class="navButtons"> <a href="../views/contact.html">Contact Me</a> </button>
     </div>
+
+    <div id="resContainer">
+     <img id="resumeIMG" src="../imgs/resume1.png"> 
+
+    </div>
+
 </body>
 
 <footer>
