--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,23 @@ a {
     height: 583px;
 }
 
+#resContainer {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-family: punk;
+    color: rgb(242, 242, 242);
+    background-color: rgba(0, 0, 0, .5);
+    width: 100vw;
+    height: 100%;
+}
+
+#resumeIMG {
+    align-self: center;
+}
+
+
 #projSect1 {
     position: relative;
     display: flex;
@@ -126,8 +143,6 @@ a {
     height: 1000px;
 }
 
-
-
 #gitHubImg {
     width: 500px;
     height: 400px;
@@ -138,8 +153,10 @@ a {
     height: 583px;
 }
 
-#contactHeader {
+#contactsHeader {
     font-size: 75px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 #contactsImg {
@@ -165,6 +182,8 @@ a {
 }
 
 
+
+
 /* Classes
 -----------------------------------------------------------------*/
 
@@ -181,3 +200,4 @@ a {
    border-radius:15px;
    width: 18vw;
 }
+
