--- a/views/projects.html
+++ b/views/projects.html
@@ -12,13 +12,13 @@
 </head>
 
 <body id="pageContent">
-    <img id="pageBG" src="../imgs/bg3.jpg">
+    <img id="pageBG" src="../imgs/altBG3.jpg">
     <div id="navContainer">
         <button class="navButtons"> <a href="../index.html">Bio</a> </button>
-        <button class="navButtons"> <a href="../views/resume.html">Resume</a> </button>
+        <button class="navButtons" > <a href="../views/resume.html">Resume</a> </button>
         <img class="navLinks" src="../imgs/ezgif.com-gif-maker(5).gif">
-        <button class="navButtons"> <a>Projects</a> </button>
-        <button class="navButtons"> <a href="../views/contact.html">Contact Me</a> </button>
+        <button class="navButtons" > <a>Projects</a> </button>
+        <button class="navButtons" > <a href="../views/contact.html">Contact Me</a> </button>
     </div>
     <div class="carouselContainer">
         <div class="car1">
