--- a/views/contact.html
+++ b/views/contact.html
@@ -21,7 +21,7 @@
         <button class="navButtons"> <a>Contact Me</a> </button>
     </div>
 
-    <div id="projSect1">
+    <div id="linkSect1">
         <img id="contactsImg" src="../imgs/smalls.jpg">
         <img id="contactsImg2" src="../imgs/smalls2.jpg">
         <p id="contactsHeader">reach out</p>
