--- a/views/projects.html
+++ b/views/projects.html
@@ -21,6 +21,18 @@
         <button class="navButtons" > <a href="../views/contact.html">Contact Me</a> </button>
     </div>
     
+    <div id="proj1">
+        <h3 class="marginH3"><u>SPACE BATTLE!</u></h3>
+        <p id="projText">A simple yet fun terminal game</p>
+        <img id="projIMG1"  src="../imgs/Projects1.png">
+    </div>
+
+    <div id="proj2">
+        <h3 class="marginH3"><u>HANGMAN!</u></h3>
+        <p id="projText">A new take on the classic</p>
+        <img id="projIMG2" src="../imgs/projects2.png">
+    </div>
+
 </body>
 
 <footer>
