--- a/views/projects.html
+++ b/views/projects.html
@@ -23,7 +23,7 @@
     
     <div id="proj1">
         <h3 class="marginH3"><u>SPACE BATTLE!</u></h3>
-        <p id="projText">A simple yet fun terminal game</p>
+        <p id="projText">A simple and fun terminal game</p>
         <img id="projIMG1"  src="../imgs/Projects1.png">
     </div>
 
