--- a/views/contact.html
+++ b/views/contact.html
@@ -2,31 +2,30 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript" src="/views/app.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imgs/skull360.gif" type="image/gif">
     <!--Gif does not work in chrome.... chrome kinda sucks 0-0-->
-    <title>Portfolio</title>
+    <title>Contact Me</title>
 </head>
 
 <body id="pageContent">
     <img id="pageBG" src="../imgs/bg4.jpg">
     <div id="navContainer">
-        <button class="navButtons"> <a href="../index.html">Bio</a> </button>
-        <button class="navButtons"> <a href="../views/resume.html">Resume</a> </button>
+        <a href="../index.html"><button class="navButtons">Bio</button></a>
+        <a href="../views/resume.html"><button class="navButtons">Resume</button></a>
         <img class="navLinks" src="../imgs/ezgif.com-gif-maker(5).gif">
-        <button class="navButtons"> <a href="../views/projects.html">Projects</a> </button>
+        <a href="../views/projects.html"><button class="navButtons">Projects</button></a>
         <button class="navButtons"> <a>Contact Me</a> </button>
     </div>
 
     <div id="linkSect1">
-        <img id="contactsImg" src="../imgs/smalls.jpg">
-        <img id="contactsImg2" src="../imgs/smalls2.jpg">
         <p id="contactsHeader" class="contactColor">reach out</p>
-        <h4><a href="">SethJohnsonCoding@gmail.com</a></h4>
-        <h4><a href="">SethJohnsonWelding@gmail.com</a></h4>
+        <h4><a href="mailto:sethjohnsoncoding@gmail.com">SethJohnsonCoding@gmail.com</a></h4>
+        <h4><a href="mailto:sethjohnsonwelding@gmail.com">SethJohnsonWelding@gmail.com</a></h4>
         <h4><a href="https://www.linkedin.com/in/seth-johnson-46a792263/">Linkedin</a></h4>
         <h4><a href="https://github.com/Bones0689">GitHub</a></h4>
     </div>
