--- a/views/resume.html
+++ b/views/resume.html
@@ -2,24 +2,24 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript" src="/views/app.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imgs/skull360.gif" type="image/gif">
-    <title>My Resume</title>
+    <title>Resume</title>
 </head>
 
 <body id="pageContent">
     <img id="pageBG" src="../imgs/altBG2.jpg">
     <div id="navContainer">
-        <button class="navButtons"> <a href="../index.html">Bio</a> </button>
+        <a href="../index.html"><button class="navButtons">Bio</button></a> 
         <button class="navButtons" class="thisPage"> <a>Resume</a> </button>
         <img class="navLinks" src="../imgs/ezgif.com-gif-maker(5).gif">
-        <button class="navButtons"> <a href="../views/projects.html">Projects</a> </button>
-        <button class="navButtons"> <a href="../views/contact.html">Contact Me</a> </button>
+        <a href="../views/projects.html"><button class="navButtons">Projects</button></a>
+        <a href="../views/contact.html"><button class="navButtons">Contact Me</button></a>
     </div>
-
     <div id="resContainer">
      <img id="resumeIMG" src="../imgs/resume1.png"> 
     </div>
