--- a/views/projects.html
+++ b/views/projects.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script type="text/javascript" src="/views/app.js"></script>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,11 +15,11 @@
 <body id="pageContent">
     <img id="pageBG" src="../imgs/altBG3.jpg">
     <div id="navContainer">
-        <button class="navButtons"> <a href="../index.html">Bio</a> </button>
-        <button class="navButtons" > <a href="../views/resume.html">Resume</a> </button>
+        <a href="../index.html"><button class="navButtons">Bio</button></a>
+        <a href="../views/resume.html"><button class="navButtons" >Resume</button></a> 
         <img class="navLinks" src="../imgs/ezgif.com-gif-maker(5).gif">
         <button class="navButtons" > <a>Projects</a> </button>
-        <button class="navButtons" > <a href="../views/contact.html">Contact Me</a> </button>
+        <a href="../views/contact.html"><button class="navButtons" >Contact Me</button></a>
     </div>
     
     <div id="proj1">
