--- a/views/resume.html
+++ b/views/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script type="text/javascript" src="/views/app.js"></script>
+    <script type="text/javascript" src="../app.js" defer></script>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
