--- a/views/resume.html
+++ b/views/resume.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script type="text/javascript" src="../app.js" defer></script>
+    <script type="text/javascript" src="../resume.js" defer></script>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <img id="pageBG" src="../imgs/altBG2.jpg">
     <div id="navContainer">
         <a href="../index.html"><button class="navButtons">Bio</button></a> 
-        <button class="navButtons" class="thisPage"> <a>Resume</a> </button>
+        <button class="navButtons"> <a>Resume</a> </button>
         <img class="navLinks" src="../imgs/ezgif.com-gif-maker(5).gif">
         <a href="../views/projects.html"><button class="navButtons">Projects</button></a>
         <a href="../views/contact.html"><button class="navButtons">Contact Me</button></a>
