--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,4 @@
-/* fonts 
-----------------------------------------------*/
-@font-face {
-    font-family: punk;
-    src: url(./fonts/1\ Punk.ttf)
-}
 
-@font-face {
-    font-family: skulls;
-    src: url(./fonts/skullcap.ttf)
-}
-
-@font-face {
-    font-family: coffee;
-    src: url(./fonts/Coffee-Mood.ttf)
-}
-/* keyframes
--------------*/
-
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
-  }
-
-@keyframes color-change {
-    0% { color: rgb(242, 242, 242); }
-    50% { color: #721414; }
-    100% { color: rgba(0, 0, 0, .5); }
-}
-
-@keyframes grow {
-    0% {transform: scale(1);}
-    100% {transform: scale(2);}
-}
-
-@keyframes shrink {
-    0% {transform: scale(2);}
-    100% {transform: scale(1);}
-}
 /* Elements
 ----------------------------------------------------*/
 
@@ -65,7 +27,6 @@ a {
     color: rgb(242, 242, 242);
 }
 
-
 /* ID's
 ---------------------------------------------------*/
 #pageContent {
@@ -86,6 +47,7 @@ a {
 }
 
 #bio {
+    position: relative;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -265,13 +227,6 @@ a {
     width: 18vw;
 }
 
-/*
-.navButtons:hover {
-  background-color: rgba(114, 20, 20, .9);
-    
-}
-*/
-
 .BioText {
     position: relative;
     font-size: 30px;
@@ -297,3 +252,42 @@ a {
     animation: color-change 4s infinite;
 }
 
+/* fonts 
+----------------------------------------------*/
+@font-face {
+    font-family: punk;
+    src: url(./fonts/1\ Punk.ttf)
+}
+
+@font-face {
+    font-family: skulls;
+    src: url(./fonts/skullcap.ttf)
+}
+
+@font-face {
+    font-family: coffee;
+    src: url(./fonts/Coffee-Mood.ttf)
+}
+/* keyframes
+-------------*/
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
+@keyframes color-change {
+    0% { color: rgb(242, 242, 242); }
+    50% { color: #721414; }
+    100% { color: rgba(0, 0, 0, .5); }
+}
+
+@keyframes grow {
+    0% {transform: scale(1);}
+    100% {transform: scale(2);}
+}
+
+@keyframes shrink {
+    0% {transform: scale(2);}
+    100% {transform: scale(1);}
+}
