--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ a {
     src: url(./fonts/Coffee-Mood.ttf)
 }
 /* keyframes
--------------*/
+--------------*/
 
 @keyframes fadeIn {
     0% { opacity: 0; }
