--- a/views/resume.html
+++ b/views/resume.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="../imgs/skull360.gif" type="image/gif">
+    <!--Gif does not work in chrome.... chrome kinda sucks 0-0-->
     <title>Resume</title>
 </head>
 
@@ -25,9 +26,5 @@
     </div>
 
 </body>
-
-<footer>
-
-</footer>
 
 </html>
